<resources>
    <string name="app_name">GestionLivres</string>
    <string name="a_hand_picking_a_book_surrounded_by_flowers">a hand picking a book surrounded by flowers</string>
    <string name="welcome">Welcome</string>
    <string name="open_book">Open Book</string>
    <string name="next">Next</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="add">Add</string>
    <string name="all">All</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="back">back</string>
    <string name="exist">Exist</string>
    <string name="borrowed">Borrowed</string>
    <string name="not_exist">Not Exist</string>
    <string name="not_borrowed">Not Borrowed</string>
    <string name="description">Description</string>
    <string name="book_author">Book Author</string>
    <string name="book_title">Book Title</string>
    <string name="add_book">Add Book</string>
    <string name="available">Available?</string>
    <string name="borrow_date">Borrow Date</string>
    <string name="return_date">Return Date</string>
    <string name="upload_image">Upload Image</string>
    <string name="title">Title :</string>
    <string name="author">Author :</string>
    <string name="description_">Description :</string>
    <string name="availability">Availability :</string>
    <string name="return_date_">Return Date :</string>
    <string name="borrowed_date">Borrowed Date :</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>
    <string name="Borrowed2">Borrowed :</string>

</resources>