<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_book"
            android:textColor="@color/brown"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_title"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_author"
            android:inputType="text"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editBookDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/dialogBookImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"
            android:scaleType="centerCrop"
            android:src="@drawable/openbook"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogBtnUploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/upload_image"
            app:cornerRadius="8dp" />


        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switchAvailability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available"
            app:thumbIconTint="@color/green"
            app:trackTint="@color/gray" />

        <LinearLayout
            android:id="@+id/layoutBorrowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioGroup
                android:id="@+id/radioGroupBorrowed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBorrowed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borrowed" />

                <RadioButton
                    android:id="@+id/radioNotBorrowed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/not_borrowed" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/layoutDates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSelectBorrowDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="15sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/borrow_date"
                    android:textSize="11sp"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSelectReturnDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="15sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/return_date"
                    android:textSize="11sp"
                    app:cornerRadius="8dp" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialogBtnAddBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:backgroundTint="@color/green"
            android:text="@string/add"
            app:cornerRadius="8dp" />
    </LinearLayout>

