<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/brown">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/a_hand_picking_a_book_surrounded_by_flowers"
        android:scaleType="centerCrop"
        android:src="@drawable/handbook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp"
        android:background="@drawable/login_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeMaxTextSize="45sp"
                android:autoSizeMinTextSize="25sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:text="@string/welcome"
                android:textColor="@color/green"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_margin="20dp"/>

             <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                app:expandedHintEnabled="true"
                android:hint="@string/email"
                android:layout_marginTop="40dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <!--password-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                app:expandedHintEnabled="true"
                android:hint="@string/password"
                android:layout_marginTop="40dp"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <!--login button-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:autoSizeMaxTextSize="25sp"
                    android:autoSizeMinTextSize="15sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:textSize="20sp"
                    app:cornerRadius="8dp"
                    app:backgroundTint="@color/green"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:transitionName="sharedSignUpText"
                    android:text="@string/sign_up"
                    android:autoSizeMaxTextSize="25sp"
                    android:autoSizeMinTextSize="15sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:textSize="20sp"
                    app:cornerRadius="8dp"
                    app:backgroundTint="@color/green"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    />
            </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>