<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpActivity"
    android:background="@color/brown"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/signup_bg"
            android:elevation="3dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/open_book"
                android:scaleType="centerInside"
                android:src="@drawable/openbook" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/signUpContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autoSizeMaxTextSize="45sp"
            android:autoSizeMinTextSize="25sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="35sp"
            android:textStyle="bold"
            android:transitionName="sharedSignUpText" />


        <!--username-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/username"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:expandedHintEnabled="true"
            app:hintAnimationEnabled="true"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--login button-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/back"
                android:textSize="20sp"
                app:backgroundTint="@color/green"
                app:cornerRadius="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:autoSizeMaxTextSize="25sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/next"
                android:textSize="20sp"
                app:backgroundTint="@color/green"
                app:cornerRadius="8dp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>