<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DashboardActivity"
    android:background="#F2FFFFFF"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/search_bar_bg"
            android:elevation="3dp"
            android:iconifiedByDefault="false"
            android:padding="10dp"
            android:queryHint="Search here ..."
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShowAddBookDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/green"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeStepGranularity="1sp"
                android:gravity="center"
                app:cornerRadius="8dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/existCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/exist"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:autoSizeMaxTextSize="15sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:gravity="center"
                    app:buttonTint="@color/green"
                    />
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/borrowedCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/borrowed"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:autoSizeMaxTextSize="15sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:gravity="center"
                    app:buttonTint="@color/green"
                    />
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/notExistCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/not_exist"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:autoSizeMaxTextSize="15sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:gravity="center"
                    app:buttonTint="@color/green"
                    />
                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/notBorrowedCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/not_borrowed"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    android:autoSizeMaxTextSize="15sp"
                    android:autoSizeMinTextSize="10sp"
                    android:autoSizeStepGranularity="1sp"
                    android:gravity="center"
                    app:buttonTint="@color/green"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout3"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/baseline_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>






