<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent">-->

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="20dp"
    android:backgroundTint="@color/white"
    app:cardElevation="3dp"
    app:strokeWidth="0dp"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="Title"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:padding="10dp"/>

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:src="@drawable/openbook" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cardDeleteBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="8sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:elevation="3dp"
                    android:text="@string/delete"
                    android:textColor="@color/brown"
                    android:textSize="10sp"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cardAddBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="8sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:elevation="3dp"
                    android:text="@string/update"
                    android:textColor="@color/brown"
                    android:textSize="10sp"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cardDetailsBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="20sp"
                    android:autoSizeMinTextSize="8sp"
                    android:autoSizeStepGranularity="1sp"
                    android:autoSizeTextType="uniform"
                    android:elevation="3dp"
                    android:text="@string/details"
                    android:textColor="@color/brown"
                    android:textSize="10sp"
                    app:cornerRadius="8dp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
<!--</androidx.constraintlayout.widget.ConstraintLayout>-->